--- a/EliteJournalReader/EliteJournalReader.csproj
+++ b/EliteJournalReader/EliteJournalReader.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;netstandard2.0;netstandard2.1;.net8.0</TargetFrameworks>
-    <Version>3.7.4</Version>
+    <TargetFrameworks>net8.0</TargetFrameworks>
+    <Version>3.8.0</Version>
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <SignAssembly>false</SignAssembly>
     <Copyright>Copyright © Maurits Elbers (@MagicMau) 2015-2021. Elite: Dangerous and related material is © Frontier Developments plc</Copyright>
     <Company>MagicMau</Company>
     <PackageId>EliteJournalReader</PackageId>
-    <AssemblyVersion>3.7.3.1</AssemblyVersion>
+    <AssemblyVersion>3.8.0.1</AssemblyVersion>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Authors>MagicMau</Authors>
   </PropertyGroup>
